examples/reference/linker_regions_phase6_region_binding_conflict.err
Assembly failed:
10: ERROR [asm202]
   10 | .place code in rom
 ^
ERROR: Section is bound to region 'ram' but was placed in region 'rom': code
